Use sharper transformer and Gatsby Image

--- a/posts/learning-gatsby/index.mdx
+++ b/posts/learning-gatsby/index.mdx
@@ -1,5 +1,7 @@
 ---
 title: Learning about Gatsby
+image: ./SevenDreds1_300.jpg
+imageAlt: "An drawing of me drawing, cross-legged"
 ---
 
 Just a bit of placeholder markdown from my Egghead lesson, Build a devloper blog post with Gatsby
