Rename from blog post to blog note

--- a/notes/demo-second-post.mdx
+++ b/notes/demo-second-post.mdx
@@ -1,18 +1,11 @@
 ---
-title: Learning about Gatsby
-image: ./SevenDreds1_300.jpg
-imageAlt: "An drawing of me drawing, cross-legged"
+title: Demo second note
 ---
 
-Just a bit of placeholder markdown from my Egghead lesson, Build a devloper blog post with Gatsby
+Here so we can list notes. If the second note wasn't here it would be a list of one, which is not so easy to recognise as a list.
 
 ## Subtitle
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
-```js
-let example = "egghead";
-example = "highlight"; // highlight-line
-```
 
 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
