Rename open tabs note

--- a/content/notes/open-tabs-of-2021-04.mdx
+++ b/content/notes/open-tabs-of-2021-04.mdx
@@ -13,7 +13,7 @@ I have loads of tabs open. each could be:
 - note to work on later
   - in Trello
 - note to refer back to later
-  - Bookmark
+  - bookmark
 - take notes here to enhance comprehension and add to future discoverability
 
 My intention: clear my head after my most recent engagement and nurture that self trust relationship where I put something to one side saying, "I'll come back to that"
