--- a/content/notes/i-am-writing-for-myself/index.mdx
+++ b/content/notes/i-am-writing-for-myself/index.mdx
@@ -5,6 +5,6 @@ image: ./SevenDreds1_300.jpg
 imageAlt: "An drawing of me drawing, cross-legged"
 ---
 
-**So why write at all?** Clear your head, get your thoughts in line, practice articulation, store some of your thoughts else where (like backup or archive). <a href="https://twoormore.eu/">Jorge</a> called it "external memory".
+**So why write at all?** Clear your head, get your thoughts in line, practice articulation, store some of your thoughts elsewhere (like backup or archive). <a href="https://twoormore.eu/">Jorge</a> called it _external memory_.
 
 Something about writing has always evoked an audience for me. I imagine people studying my words when I'm not there. So I fantasise that my writing has an audience but I am not _writing for an audience_. I am not putting effort into designing what I want to say, who to, or how I want them to feel. This frees me to write what I want and not worry about success. Time will tell if it has much appeal to others but that's not the primary concern. I remind myself to just relax and write because I want to. There is value in that
