Fix overlooked used of "post" for "note"

--- a/content/notes/learning-gatsby.mdx
+++ b/content/notes/learning-gatsby.mdx
@@ -1,11 +1,11 @@
 ---
 date: 2021-04-03
-title: I am following a "Build A Developer Blog" course on egghead.io and finally actually building a blog for myself. This post is the start of that and mostly just provides examples of things that are made easy by this tech
+title: I am following a "Build A Developer Blog" course on egghead.io and finally actually building a blog for myself. This note is the start of that and mostly just provides examples of things that are made easy by this tech
 ---
 
 import { Link } from "gatsby";
 
-It's [Gatsby](https://www.gatsbyjs.com) and the posts are written in markdown. I haven't discovered yet why the files are `.mdx` and not just `.md`. Perhaps I can put react components into them.
+It's [Gatsby](https://www.gatsbyjs.com) and the notes are written in markdown. I haven't discovered yet why the files are `.mdx` and not just `.md`. Perhaps I can put react components into them.
 
 <aside>
   <Link to="/notes/gatsby-mdx">I look into that a bit more here</Link>
@@ -20,10 +20,10 @@ More example content. Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
 ````mdx
 ---
 date: 2021-04-03
-title: I am following a "Build A Developer Blog" course on egghead.io and finally actually building a blog for myself. This post is the start of that and mostly just provides examples of things that are made easy by this tech stack
+title: I am following a "Build A Developer Blog" course on egghead.io and finally actually building a blog for myself. This note is the start of that and mostly just provides examples of things that are made easy by this tech stack
 ---
 
-It's [Gatsby](https://www.gatsbyjs.com) and the posts are written in markdown. I haven't discovered yet why the files are `.mdx` and not just `.md`. Perhaps I can put react components into them.
+It's [Gatsby](https://www.gatsbyjs.com) and the notes are written in markdown. I haven't discovered yet why the files are `.mdx` and not just `.md`. Perhaps I can put react components into them.
 
 <aside>
   <Link to="/notes/gatsby-mdx">I look into that a bit more here</Link>
