Improve the metadata for note pages

--- a/content/notes/test-content.mdx
+++ b/content/notes/test-content.mdx
@@ -1,6 +1,7 @@
 ---
 afterthoughts: Hello! this is a simulation of an "afterthought". I expect it to be included in an aside at the bottom of the page.
 date: 2021-04-14
+description: This description should appear in the metadata for this page. This is a test page in the notes section of my website.
 title: "Here's an idea: this page will be my test content. I'll include one of everything in here and use it for a very quick smoke-test"
 ---
 
@@ -74,6 +75,7 @@ Optional data about a <Link to="/notes/">Note</Link> page.
 | --------------- | ----------------------------- |
 | afterthoughts   | end of note page              |
 | date            | sort of notes index           |
+| description     | metadata descriptions         |
 | image           | displayed at top of note page |
 | image           | referenced in metadata image  |
 | imageAlt        | alt text for image (above)    |
