Rename "i am writing for myself" image

--- a/content/notes/i-am-writing-for-myself/index.mdx
+++ b/content/notes/i-am-writing-for-myself/index.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2021-04-06
 title: I'm writing for myself. It's important when designing communication to know what you want to say, who you want to say it to and how you want them to feel. This isn't that – it's not designer communication – I'm writing for myself
-image: ./SevenDreds1_300.jpg
+image: ./i-am-writing-for-myself.jpg
 imageAlt: "An drawing of me drawing, cross-legged"
 ---
 
