Improve format of test content table

--- a/content/notes/test-content.mdx
+++ b/content/notes/test-content.mdx
@@ -71,18 +71,18 @@ The Gatsby `<Link>` is available to all MDX layouts
 
 Optional data about a <Link to="/notes/">Note</Link> page.
 
-| Frontmatter Key | Uses                          |
+| Key             | Use                           |
 | --------------- | ----------------------------- |
-| afterthoughts   | end of note page              |
-| date            | sort of notes index           |
-| description     | metadata descriptions         |
-| image           | displayed at top of note page |
-| image           | referenced in metadata image  |
-| imageAlt        | alt text for image (above)    |
-| title           | listed in notes index         |
-| title           | metadata titles for note page |
-| title           | top of note page              |
-| title           | window title for note page    |
+| `afterthoughts` | end of note page              |
+| `date`          | sort of notes index           |
+| `description`   | metadata descriptions         |
+| `image`         | displayed at top of note page |
+| `image`         | referenced in metadata image  |
+| `imageAlt`      | alt text for image (above)    |
+| `title`         | listed in notes index         |
+| `title`         | metadata titles for note page |
+| `title`         | top of note page              |
+| `title`         | window title for note page    |
 
 It's [Gatsby](https://www.gatsbyjs.com) and the notes are written in markdown. I haven't discovered yet why the files are `.mdx` and not just `.md`. Perhaps I can put react components into them.
 
