Improve markup of afterthought paragraph

--- a/content/notes/test-content.mdx
+++ b/content/notes/test-content.mdx
@@ -1,5 +1,5 @@
 ---
-afterthoughts: Hello! this is a simulation of an "afterthought". I expect it to be included in an aside at the bottom of the page.
+afterthoughts: This note should have an "afterthought" so we can test this feature is working. I expect it to be included in an aside at the bottom of the page.
 date: 2021-04-14
 description: This description should appear in the metadata for this page. This is a test page in the notes section of my website.
 title: "Here's an idea: this page will be my test content. I'll include one of everything in here and use it for a very quick smoke-test"
