Correct typo, double “this”

--- a/content/notes/test-content.mdx
+++ b/content/notes/test-content.mdx
@@ -11,7 +11,7 @@ I don't currently have ~~any~~ <sup><a href="#many-checks">[many]</a></sup> auto
 
 So for now I perform an unscripted manual check quite naturally. I look at the live site after I've made changes to it or added new content.
 
-This page is somewhere I can note the features I have used on the site – a single place to quickly review everything. If I automate the natural checks I'm making I can start by checking what's on this this page.
+This page is somewhere I can note the features I have used on the site – a single place to quickly review everything. If I automate the natural checks I'm making I can start by checking what's on this page.
 
 ## Process
 
