Move bold to include “deployment and build checks”

--- a/content/notes/test-content.mdx
+++ b/content/notes/test-content.mdx
@@ -88,4 +88,4 @@ Initially I wrote that I don't have "any" automated checks, then I started to no
 
 - **Linting** should happen whenever I save, assuming the format of the document is correct. If it fails I notice. This is a frequent, super cheap check that is very easy to keep green.
 
-- **Deployment and build** checks are another frequent, unobtrusive check that should not be underrated. When I push to my repo the automated pipeline runs build and deploy tasks. If there are errors then deployment fails and I notice.
+- **Deployment and build checks** are another frequent, unobtrusive check that should not be underrated. When I push to my repo the automated pipeline runs build and deploy tasks. If there are errors then deployment fails and I notice.
