Add detail to the different reading actions

--- a/content/notes/open-tabs-of-2021-04.mdx
+++ b/content/notes/open-tabs-of-2021-04.mdx
@@ -6,21 +6,31 @@ afterthoughts: Since setting out to do this I've end up building myself this sit
 
 I have loads of tabs open. each could be:
 
-- read now
-- close won't read
-- note to read later
-  - in Pocket
-- note to work on later
-  - in Trello
-- note to refer back to later
-  - bookmark
-- take notes here to enhance comprehension and add to future discoverability
+1. Read now
+1. Close with conviction / won't read
+1. Note to read later
+
+   - in <a href="https://getpocket.com/@bz1gad88pjS23Ae27dT0gRDT5aA8p917e03Z88z459qp8ey493d62u93k85jh8eb">my Pocket app</a>
+
+1. Note to work on later
+
+   - on <a href="https://trello.com/b/cwtapAZZ/to-do">my Trello board (Private)</a>
+
+1. Note to refer back to later
+
+   - via my <a href="https://support.mozilla.org/en-US/kb/bookmarks-firefox">Firefox bookmarks</a>
+
+1. Write a note in order to enhance my comprehension and aid to future discoverability
+
+   - <a href="#noted-here">on this page below</a>
 
 My intention: clear my head after my most recent engagement and nurture that self trust relationship where I put something to one side saying, "I'll come back to that"
 
 I have this nagging suspicion that it's a waste of time. Am I procrastinating? I want to find some good stuff and decide what to focus on next but I already know what I want to do. There are some really good tabs about WebGL and combining 3D assets with a map UI.
 
 So I'll timebox this exercise to today and tomorrow and then get stuck into those. Hopefully those will appear in the list below
+
+<a name="noted-here" />
 
 ## Notes to enhance comprehension and future discoverability
 
