Add links to page on digital mapping

--- a/content/notes/open-tabs-of-2021-04.mdx
+++ b/content/notes/open-tabs-of-2021-04.mdx
@@ -26,9 +26,9 @@ I have loads of tabs open. each could be:
 
 My intention: clear my head after my most recent engagement and nurture that self trust relationship where I put something to one side saying, "I'll come back to that"
 
-I have this nagging suspicion that it's a waste of time. Am I procrastinating? I want to find some good stuff and decide what to focus on next but I already know what I want to do. There are some really good tabs about WebGL and combining 3D assets with a map UI.
+I have this nagging suspicion that it's a waste of time. Am I procrastinating? I want to find some good stuff and decide what to focus on next but I already know what I want to do. There are <Link to="/notes/on-creating-digital-maps">some really good tabs about WebGL and combining 3D assets with a map UI.</Link>
 
-So I'll timebox this exercise to today and tomorrow and then get stuck into those. Hopefully those will appear in the list below
+So I'll timebox this exercise to today and tomorrow and then get stuck into <Link to="/notes/on-creating-digital-maps">those</Link>
 
 <a name="noted-here" />
 
