Add to note about open tabs

--- a/content/notes/open-tabs-of-2021-04.mdx
+++ b/content/notes/open-tabs-of-2021-04.mdx
@@ -1,34 +1,48 @@
 ---
-title: I'm going through my open tabs and taking a note of anything worth keeping. It's my first day on the bench and this is helping me to take stock of different things I am interested in and make plans for what to do next
+title: Mental tidying. I'm going through my open tabs and taking a note of anything worth keeping. It's my first day on the bench and this is helping me to take stock of different things I am interested in and make plans for what to do next
 date: 2021-04-06T16:08
 afterthoughts: Since setting out to do this I've end up building myself this site in order to take these notes. I guess I don't respect timeboxes when it's my first few days on the bench 🤷
 ---
 
-I have loads of tabs open. each could be:
+I have loads of tabs open. I have a few options for what to do with each one:
 
 1. Read now
-1. Close with conviction / won't read
-1. Note to read later
+1. Close without reading
+1. Queue to read later
 
    - in <a href="https://getpocket.com/@bz1gad88pjS23Ae27dT0gRDT5aA8p917e03Z88z459qp8ey493d62u93k85jh8eb">my Pocket app</a>
 
-1. Note to work on later
+1. Queue to work on later
 
    - on <a href="https://trello.com/b/cwtapAZZ/to-do">my Trello board (Private)</a>
 
-1. Note to refer back to later
+1. Bookmark for future reference
 
    - via my <a href="https://support.mozilla.org/en-US/kb/bookmarks-firefox">Firefox bookmarks</a>
 
-1. Write a note in order to enhance my comprehension and aid to future discoverability
+1. Write about the contents <a href="#noted-here">here on this page</a>
 
-   - <a href="#noted-here">on this page below</a>
+   - to enhance my comprehension
+   - to recapture my related thoughts in the future
 
-My intention: clear my head after my most recent engagement and nurture that self trust relationship where I put something to one side saying, "I'll come back to that"
+## My intention
 
-I have this nagging suspicion that it's a waste of time. Am I procrastinating? I want to find some good stuff and decide what to focus on next but I already know what I want to do. There are <Link to="/notes/on-creating-digital-maps">some really good tabs about WebGL and combining 3D assets with a map UI.</Link>
+- Clear my head after my most recent engagement (I work as a consultant and change engagements fairly frequently)
+- Nurture that self-trust where you say to yourself, "I'll come back to that later" – and then you actually do.
 
-So I'll timebox this exercise to today and tomorrow and then get stuck into <Link to="/notes/on-creating-digital-maps">those</Link>
+## Am I procrastinating?
+
+I want to find some good stuff and decide what to focus on next. However, I already know what I want to do next...
+
+There are <Link to="/notes/on-creating-digital-maps">some really good links about placing 3D assets on a real scale world map</Link> that I want to turn into a personal learning path. So am I wasting time by not getting straight down to that?
+
+I don't think so. There's something restful and restorative about tidying up after the previous engagement and something pleasing about preparing for the next focus with a tidy working environment.
+
+### How could it be done differently?
+
+Potentially, I could keep a tidy environment all the time. I could apply one of the options above to each neglected tab more immediately, rather than letting them build up to the end of a project. I'd keep that clean environment continually available. But I like the tidy up and having a large number of tabs to go through helps to evaluate the relative importance of each one.
+
+It's all a balance really.
 
 <a name="noted-here" />
 
