--- a/content/notes/on-creating-digital-maps.mdx
+++ b/content/notes/on-creating-digital-maps.mdx
@@ -11,6 +11,16 @@ I spent a few hours reading up on WebGL, OpenStreetMaps and digital cartography 
 
 ### WebGL (the basics for creating 3D maps)
 
+#### [WebGL model view projection](https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_model_view_projection)
+
+> This article explores how to take data within a WebGL project, and project it into the proper spaces to display it on the screen. It assumes a knowledge of basic matrix math using translation, scale, and rotation matrices. It explains the three core matrices that are typically used when composing a 3D scene: the model, view and projection matrices.
+>
+> <cite>
+>   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_model_view_projection">
+>     developer.mozilla.org[...]WebGL_model_view_projection
+>   </a>
+> </cite>
+
 ### Creating a globe-scale map with something like a custom instance of Open Street maps
 
 [stub]
