Add BlockQuote to test page

--- a/content/notes/test-content.mdx
+++ b/content/notes/test-content.mdx
@@ -42,6 +42,29 @@ However, `shortcodes` are the JSX components that I pass in to `MDXProvider` and
 
 #### Expected shortcodes
 
+##### BlockQuote
+
+<BlockQuote
+  citationUrl="https://dc5b.com"
+  date="April 2021"
+  heading="Example of citation URL without a pathname"
+  headingLevel={6}
+>
+
+DC5B is going on behind the scenes
+
+</BlockQuote>
+
+<BlockQuote
+  citationUrl="https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_model_view_projection"
+  heading="WebGL model view projection"
+  headingLevel={6}
+>
+
+This article explores how to take data within a WebGL project, and project it into the proper spaces to display it on the screen. It assumes a knowledge of basic matrix math using translation, scale, and rotation matrices. It explains the three core matrices that are typically used when composing a 3D scene: the model, view and projection matrices.
+
+</BlockQuote>
+
 ##### Emoji
 
 ```jsx
