Improve Matrix Theory descriptive text

--- a/content/notes/on-creating-digital-maps.mdx
+++ b/content/notes/on-creating-digital-maps.mdx
@@ -43,13 +43,6 @@ This article explores how to take data within a WebGL project, and project it in
   heading="Matrix theory"
 >
 
-In mathematics, a matrix is a rectangular array or table of numbers, symbols, or expressions, arranged in rows and columns. For example, the dimension of the matrix below is 2 × 3 (read "two by three"), because there are two rows and three columns:
-
-    1   9   -13
-    20  5   -6
-
-[...]
-
 A major application of matrices is to represent linear transformations (that is, generalizations of linear functions such as f(x) = 4x). For example, the rotation of vectors in three-dimensional space is a linear transformation, which can be represented by a rotation matrix R: if v is a column vector (a matrix with only one column) describing the position of a point in space, the product Rv is a column vector describing the position of that point after a rotation. The product of two transformation matrices is a matrix that represents the composition of two transformations.
 
 [...]
@@ -60,7 +53,7 @@ Applications of matrices are found in most scientific fields.[6] In every branch
 
 </BlockQuote>
 
-Not sure it's necessary to go this deep but it is interesting and related to the fundamentals of WebGL
+More depth than necessary but very interesting, and related to the fundamentals of WebGL
 
 <a name="other-geospatial-software" />
 
