Note link to "WebGL 2D Matrices"

--- a/content/notes/on-creating-digital-maps.mdx
+++ b/content/notes/on-creating-digital-maps.mdx
@@ -55,6 +55,15 @@ Applications of matrices are found in most scientific fields.[6] In every branch
 
 More depth than necessary but very interesting, and related to the fundamentals of WebGL
 
+<BlockQuote
+  citationUrl="https://webglfundamentals.org/webgl/lessons/webgl-2d-matrices.html"
+  heading="WebGL 2D Matrices"
+>
+
+This post is a continuation of a series of posts about WebGL. The first started with fundamentals and the previous was about scaling 2D geometry.
+
+</BlockQuote>
+
 <a name="other-geospatial-software" />
 
 ### Other GeoSpatial software
