--- a/content/notes/3d-webgel-first-steps-variables.mdx
+++ b/content/notes/3d-webgel-first-steps-variables.mdx
@@ -14,6 +14,4 @@ Below are my result from the tutorial:
 
 Next, I'd like to add some controls to the UI to make the 3D rendering interactive.
 
-**To be continued**
-
-**...**
+<Stub />
