--- a/content/notes/3d-webgel-first-steps-variables.mdx
+++ b/content/notes/3d-webgel-first-steps-variables.mdx
@@ -6,7 +6,7 @@ imageAlt: Screencapture of a decorated cube spinning in 3D space
 title: "The Javascript ecosystem offers exciting ways to render 3D environments. I've wanted to look into this area for some time. Here, I'm taking my first steps with WebGL. I want to build a UI with basic controls and an interactive 3D canvas"
 ---
 
-There's an excellent [WebGL tutorial on MDN](https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial) helps you render a spinning cube, covered with an image on an HTML Canvas using WebGl and a [library called `gl-matrix`](https://github.com/toji/gl-matrix).
+There's an excellent [WebGL tutorial on MDN](https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial) that gets you to render a spinning cube, covered with an image, on an HTML Canvas, using WebGl and [a library called `gl-matrix`](https://github.com/toji/gl-matrix).
 
 Below are my result from the tutorial:
 
