--- a/content/notes/3d-webgel-first-steps-variables.mdx
+++ b/content/notes/3d-webgel-first-steps-variables.mdx
@@ -110,6 +110,21 @@ cubeRotationX = document.getElementById("cubeRotationX").value;
 
 <EmbedFrame src="/embeds/3d-web-gl-first-steps-variables/control-spinning-cube/" />
 
-Next we can iterate on the form, and offer touch controls for people who prefer them.
+This is great for keyboard users and for the purpose of my experimentation.
+
+For touch screens and the mouse users we'd want to replace the form inputs with a more efficient interface. Maybe we'll do that later.
+
+### Control the zoom
+
+Imagining a camera is pointing at our 3D cubethere are at least three ways to achieve a "zoom" effect, depending on what the user has in mind:
+
+1. Move the camera closer to the cube
+1. Move the cube closer to the camera
+1. Change the magnification of the camera
+1. Increase the size of the cube
+
+I'm interested in being able to control all of these. I'm going to re-read my code, which was mostly copied from the tutorial, and try to capture these four concepts in variables.
+
+<EmbedFrame src="/embeds/3d-web-gl-first-steps-variables/zoom-spinning-cube/" />
 
 <Stub />
