Fix typos and improve copy (pathfindertools notes)

--- a/content/notes/i-love-pathfinder.mdx
+++ b/content/notes/i-love-pathfinder.mdx
@@ -10,7 +10,7 @@ I wrote the following announcement in my notepad. I guess I should add a Pathfin
 
 <BlockQuote>
 
-I love Pathfinder 1st Edition and build my own tools for gamemastering. They are an eclectic bunch of early interation tools built primarily for myself. I believe in Open Source and hope that in future they will form a useful set of resources that other will benefit from. I'm a creative developer – I'm happy to iterate and have bugs, feature requests and all sorts shared with me. Your feedback, ideas, suggestions and improvements can help drive this tool set forwards. Use GitHub if you can to share your ideas and there's also email.
+I love Pathfinder 1st Edition and build my own tools for gamemastering. They are an eclectic bunch of early interation tools built primarily for myself. I believe in Open Source and hope that in future they will form a useful set of resources that others will benefit from. I'm a creative developer – so happy to iterate, and to have bugs, feature requests and all-sorts shared with me. Your feedback, ideas, suggestions and improvements are most welcome and can drive the development of this toolset forwards. Use GitHub if you can to share your ideas and there's also email.
 
 </BlockQuote>
 
