Direct repo link to repo readme (pathfinder tools)

--- a/content/notes/i-love-pathfinder.mdx
+++ b/content/notes/i-love-pathfinder.mdx
@@ -14,4 +14,4 @@ I love Pathfinder 1st Edition and build my own tools for gamemastering. They are
 
 </BlockQuote>
 
-Website at <a href="https://www.pathfindertools.com/">www.pathfindertools.com</a> and repo at <a href="https://github.com/LL782/pathfinder-tools/">github.com/LL782/pathfinder-tools</a>
+Website at <a href="https://www.pathfindertools.com/">www.pathfindertools.com</a> and repo at <a href="https://github.com/LL782/pathfinder-tools/#pathfinder-tools/">github.com/LL782/pathfinder-tools</a>
